# sochi_2024

./: .gitignore  README.md  pyproject.toml
app/: docker-compose.yml
app/backend/: Dockerfile  pyproject.toml  requirements.txt
app/backend/src/: main.py
app/backend/src/api/v1/: api_router.py
app/backend/src/api/v1/endpoints/: busness_logic.py  db_request.py  query.py  submission.py
app/backend/src/core/: config.py  logger.py
app/backend/src/crud/: __init__.py  attempt.py  file.py  session.py
app/backend/src/db/: init_db.py  session.py
app/backend/src/instances/: __init__.py  model.py  s3_storage.py
app/backend/src/models/: __init__.py  attempt.py  base_class.py  file.py  session.py
app/backend/src/schemas/: __init__.py  submission.py
app/backend/src/temp/: d04547c0-1442-4127-a13c-413be336d095_договор.docx  d04547c0-1442-4127-a13c-413be336d095_заявление.docx
app/frontend/: Dockerfile  pyproject.toml
app/frontend/src/: app.py  menu.py  requirements.txt
app/frontend/src/.streamlit/: config.toml
app/frontend/src/pages/: classifier.py  classifier_doc.py  db_request.py  main.py  main_archive.py  recognize.py  submission.py
notebooks/: bert_train.ipynb  eda.ipynb
